# sqlite-runner

./: .deepsource.toml  MANIFEST.in  README.md  dev-requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  workflow.yml
sqliterunner/: __init__.py
tests/: test_all.py
tests/data/: game.db
